update meta info

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
     
-    <title>lo-fi aesthetic pomodoro timer · study, co-work, vibe</title>    
+    <title>lo-fi aesthetic pomodoro timer</title>
+    <meta property="og:description" content="aesthetic pomodoro timer that automatically plays lo-fi girl music 〰️ focus while you work, study, or vibe" />
     <meta property="og:url" content="https://pomodoro.day" />
     <meta property="og:image" content="./assets/images/card.png" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:image" content="./assets/images/card.png" />
 
     <link rel="stylesheet" href="style.css" />
 
